--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
 
 .menu-items {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: center;
     transition: max-height 0.3s ease; /* Smooth transition for opacity change */
@@ -61,7 +62,7 @@ h2 {
     visibility: hidden;
 }
 
-@media screen and (max-width: 393px) {
+@media (max-width: 393px) {
     .menu-items {
         display: block;
         opacity: 0; /* Initially hidden */
