--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h2 {
         right: 0;
         background-color: rgb(0, 0, 0);
         width: 100%;
+        height: 100vh;
         text-align: center;
         transition: opacity 0.3s ease; /* Smooth transition for opacity change */
     }
