--- a/style.css
+++ b/style.css
@@ -71,11 +71,14 @@ h2 {
         width: 100%;
         height: 100vh;
         text-align: center;
-        transition: opacity 0.3s ease; /* Smooth transition for opacity change */
+        transition: opacity 0.3s ease; 
     }
-
+    
+    .menu-items.show-menu li:nth-child(1) {
+        margin-top: 90px;
+    }
     .menu-items.show-menu {
-        opacity: 1; /* Show menu items when .show-menu class is added */
+        opacity: 1;
     }
     
     .menu-icon {
