--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+:root {
+    --main: rgb(233, 233, 233);
+}
 * {
     margin: 0;
     padding: 0;
 }
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(233, 233, 233);
+    background-color: var(--main);
 }
 .bg {
     width: 100%;
@@ -54,10 +57,40 @@ h2 {
     text-align: center;
     color: aliceblue;
     position: relative;
-    margin-top: 15%;
+    margin-top: 100px;
+    font-size: 50px;
 }
 #menu-toggle {
     visibility: hidden;
+}
+.search-area {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+.search {
+    padding-left: 5px;
+    width: 30%;
+    background-color: var(--main);
+    
+}
+.search::placeholder {
+    color: rgba(0, 0, 0, 0.62);
+}
+.search input[type="search"] {
+    margin-left: 10px;
+    color: red;
+}
+.button{
+    text-align: center;
+    width: 100px;
+}
+.search, .button {
+    margin: 100px 10px 0px 10px;
+    height: 40px;
+    border-radius: 5px;
+    position: relative;
+    font-size: 20px;
 }
 
 @media (max-width: 500px) {
