--- a/style.css
+++ b/style.css
@@ -135,4 +135,13 @@ h2 {
     .menu-items li {
         margin: 50px 0;
     }
+    .search {
+        width: 200px;
+    }
+    .search, .button {
+        margin: 70px 5px 0px 5px;
+    }
+    .button {
+        width: 80px;
+    }
 }
