--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h2 {
     display: flex;
     justify-content: center; 
     align-items: center; 
+    height: 150px;
 }
 .search {
     padding-left: 5px;
@@ -86,7 +87,7 @@ h2 {
     width: 100px;
 }
 .search, .button {
-    margin: 100px 10px 0px 10px;
+    margin: 100px 10px 20px 10px;
     height: 40px;
     border-radius: 5px;
     position: relative;
