--- a/style.css
+++ b/style.css
@@ -97,6 +97,68 @@ h2 {
     font-size: 20px;
 }
 
+
+/** Product area  */
+
+.main-products {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    border: 1px solid red;
+    width: 880px;
+    position: relative;
+    width: 50%;
+    height: 50%;
+    transition: ;
+}
+.card {
+    margin: 10px;
+    background-color: rgb(65, 10, 91);
+    width: 200px;
+    height: 300px;
+    border-radius: 10px;
+    border: 2px solid rgb(64, 2, 151);
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.image-container {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+.card img {
+    border-radius: 10px 10px  0 0;
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.name , .price {
+    margin-left: 5px;
+}
+.price {
+    margin-top: 5px ;
+
+}
+hr {
+    margin: 15px 5px;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 500px) {
     .menu-items {
         display: block;
